<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingBottom="@dimen/margin_padding_material_large">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_padding_material_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indeterminateAnimationType="disjoint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCardHolderHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_medium"
            android:fontFamily="sans-serif-medium"
            android:text="Card Holder"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardHolder"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvCardHolderHint">

            <com.verygoodsecurity.vgscollect.widget.PersonNameEditText
                android:id="@+id/vgsTiedCardHolder"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_holder_name_desc"
                android:importantForAccessibility="yes"
                app:fieldName="card.holderName"
                app:imeOptions="actionNext" />
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCardNumberHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_small"
            android:fontFamily="sans-serif-medium"
            android:text="Card Number"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardHolder"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCardNumber"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvCardNumberHint">

            <com.verygoodsecurity.vgscollect.widget.VGSCardNumberEditText
                android:id="@+id/vgsTiedCardNumber"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/card_number_desc"
                app:cardBrandIconGravity="end"
                app:fieldName="card.number"
                app:imeOptions="actionNext"
                app:numberDivider=" " />
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvExpiryHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_small"
            android:layout_marginEnd="@dimen/margin_padding_material_small"
            android:fontFamily="sans-serif-medium"
            android:text="Expiry"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHalf"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardNumber"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilExpiry"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            android:layout_marginEnd="@dimen/margin_padding_material_small"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineHalf"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mtvExpiryHint">

            <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
                android:id="@+id/vgsTiedExpiry"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:datePattern="MM/yy"
                app:datePickerModes="input"
                app:fieldName="card.expiry"
                app:imeOptions="actionNext"
                app:inputType="date" />
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvCvcHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_material_small"
            android:layout_marginTop="@dimen/margin_padding_material_small"
            android:fontFamily="sans-serif-medium"
            android:text="CVC"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guidelineHalf"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCardNumber"
            tools:ignore="HardcodedText" />

        <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
            android:id="@+id/vgsTilCvc"
            style="@style/VGSCollect.Widget.TextInputLayout.OutlineBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_material_small"
            android:layout_marginTop="@dimen/margin_padding_material_micro"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@+id/guidelineHalf"
            app:layout_constraintTop_toBottomOf="@+id/mtvCvcHint">

            <com.verygoodsecurity.vgscollect.widget.CardVerificationCodeEditText
                android:id="@+id/vgsTiedCvc"
                style="@style/VGSCollect.Widget.TextInputEditText.OutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fieldName="card.cvc"
                app:imeOptions="actionNext" />
        </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbTokenize"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_padding_material_medium"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Tokenize"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/vgsTilCvc"
            tools:ignore="HardcodedText" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_medium"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@+id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/mbTokenize">

            <include layout="@layout/code_view_layout" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
